--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     Open the console!
-    <script src="oregontrailinheritance.js"></script>
+    <script src="./Traveler.js"></script>
+    <script src="./Wagon.js"></script>
+    <script src="./Hunter.js"></script>
+    <script src="./Doctor.js"></script>
+    <script src="./oregontrailinheritance.js"></script>
 </body>
 </html>
